--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@types/express-fileupload": "^1.1.5",
 		"@types/express-ws": "^3.0.0",
 		"@types/fs-extra": "^9.0.1",
+		"@types/fs-extra-promise": "^1.0.9",
 		"@types/node": "^14.10.1",
 		"cross-env": "^7.0.2",
 		"nodemon-webpack-plugin": "^4.3.2",
