--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start:server": "cross-env NODE_ENV=development webpack --watch",
-		"build:server": "cross-env NODE_ENV=production webpack --watch"
+		"start": "cross-env NODE_ENV=development gulp"
 	},
 	"author": "Marc Espín Sanz",
 	"license": "MIT",
@@ -29,14 +28,16 @@
 		"@types/express-ws": "^3.0.0",
 		"@types/fs-extra": "^9.0.1",
 		"@types/fs-extra-promise": "^1.0.9",
-		"@types/node": "^14.10.1",
+		"@types/node": "^14.14.10",
 		"cross-env": "^7.0.2",
+		"gulp": "^4.0.2",
 		"nodemon-webpack-plugin": "^4.3.2",
 		"ts-loader": "^8.0.3",
 		"typescript": "^4.0.2",
 		"webpack": "^4.44.1",
 		"webpack-cli": "^3.3.12",
 		"webpack-messages": "^2.0.4",
+		"webpack-stream": "^6.1.1",
 		"webpackbar": "^4.0.0"
 	}
 }
